----------------(12-August-24)-------------------------- - Gig details pricing gap - Exchange of Discounted Price and Actual Price ( Asana ) - Correct UI of admin dashboard table listing.

--- a/assets/backend/css/admin_dashboard.css
+++ b/assets/backend/css/admin_dashboard.css
@@ -7814,7 +7814,7 @@ textarea {
 .custom_table table td {
   padding: 10px;
   border: 0;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   line-height: 24px;
   color: var(--paragraph-color);
@@ -9507,12 +9507,16 @@ li.active .curve-left {
 
  .custom_table.style-06 table tbody td {
   background:rgba(230, 230, 250, 0.4);
-  
+  min-width: 50px;
 }
 
 .custom_table.style-06 table tbody  td:first-child {
   border-top-left-radius:10px;
   border-bottom-left-radius:10px;
+}
+
+.custom_table.style-06 table tbody  td:first-child {
+  padding: 8px;
 }
 
 
